# 3ga

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  DESIGN.md  README.md  SUMMARY.md  skills-lock.json
apps/gui/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
apps/gui/src/: App.tsx  CameraController.ts  PlayCanvasViewer.ts  calibration.ts  main.tsx  recipe.test.ts  recipe.ts  styles.css
apps/gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/src/: commands.rs  lib.rs  main.rs  paths.rs
apps/gui/src-tauri/src/commands/: job.rs  source.rs  webar.rs
apps/gui/src-tauri/src/commands/editor_export/: mod.rs  service.rs  temp.rs
apps/gui/src/classes/: CameraController.ts  KeyboardFlyInput.ts  PlayCanvasViewer.ts
apps/gui/src/components/: ConfigPanel.tsx  E2eSelector.tsx  Header.tsx  PointEditor.tsx  Preview.tsx  StatusPanel.tsx
apps/gui/src/domains/calibration/: index.test.ts  index.ts
apps/gui/src/domains/editor/: EditorPanel.tsx  SceneTransformControls.tsx  sceneTransform.test.ts  sceneTransform.ts  useEditorScene.ts
apps/gui/src/e2e/: gui.spec.ts  server.ts  webar.spec.ts
apps/gui/src/hooks/: useActivityLog.ts  useBakeJob.ts  useCalibration.ts  useLocalStorage.ts  useSourceLoader.ts
apps/gui/src/styles/: styles.css
apps/gui/src/utils/: formatters.ts  jobHelpers.ts  splatPreview.test.ts  splatPreview.ts
core/: CMakeLists.txt
core/include/ga3d/: data_table.hpp  edit_recipe.hpp  glb_writer.hpp  navmesh.hpp  readers.hpp  rust_bindings.hpp  voxel.hpp
core/src/: collision_mesh.cpp  data_table.cpp  edit_recipe.cpp  gaussian_extents.cpp  glb_writer.cpp  navmesh.cpp  read_ply.cpp  read_sog.cpp  read_splat.cpp  rust_bindings.cpp  voxel_grid.cpp  voxelize.cpp
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: e2e.rs
crates/core-lib/: Cargo.toml
crates/core-lib/src/: config.rs  error.rs  evaluation.rs  gpu.rs  lib.rs  math.rs  pipeline.rs  splat_table.rs
crates/core-lib/src/gpu/: context.rs  mod.rs  shader.wgsl  voxelizer.rs
crates/core-lib/src/output/: glb.rs  manifest.rs  mod.rs  webar.rs
crates/core-lib/src/output/webar/: playcanvas.min.js  viewer.html
crates/core-lib/src/processing/: alignment.rs  filters.rs  mesh.rs  mod.rs  navmesh.rs  voxel.rs
crates/core-lib/src/readers/: mod.rs  ply.rs  sog.rs  splat.rs
docker/: Dockerfile  docker-compose.yml
docs/evaluation/: README.md  benchmark-config.json
docs/evaluation/results/: summary.csv  summary.json
docs/evaluation/results/bench-10m/: manifest.json
docs/evaluation/results/bench-500k/: manifest.json
docs/evaluation/results/bench-5m/: manifest.json
docs/evaluation/results/bench-smoke/: manifest.json
docs/sessions/: 1.md  3.md  4.md
docs/superpowers/plans/: 2026-06-16-3dgs-ar-processing-tool.md
docs/vendor-analysis/: splat-transform-pipeline.md
python/: pyproject.toml  setup.py
python/ga3d/: __init__.py  api.py  bindings.cpp  cli.py  jobs.py  manifest.py  schemas.py
python/tests/: test_api.py  test_cli.py  test_manifest.py  test_schemas.py
reference/docs/vendor-analysis/: supersplat-edit-pipeline.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bridge.rs  bridge_wrapper.cc  bridge_wrapper.h  lib.rs
tests/config/: basic.json
tests/core/: data_table_tests.cpp  edit_recipe_tests.cpp  glb_writer_tests.cpp  navmesh_tests.cpp  reader_tests.cpp  voxel_tests.cpp
tests/e2e/: test_process_fixtures.py
tests/fixtures/: minimal.ply
web/: index.html  package-lock.json  package.json
web/src/: styles.css
web/src/api/: client.ts
web/src/app/: App.tsx
web/src/edit/: EditStore.ts  EditToolbar.tsx
web/src/jobs/: JobPanel.tsx
web/src/splat/: SplatViewer.tsx
web/tests/: edit-store.test.ts
