[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "ga3d"
version = "0.1.0"
description = "3D Gaussian Splatting processing tool for AR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.8",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=9.0",
]

[project.scripts]
ga3d = "ga3d.cli:app"
