[package]
name = "augmented-gaussian-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "augmented-gaussian-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
augmented-gaussian-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
zip.workspace = true
