[package]
name = "augmented-gaussian-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
glam.workspace = true
mcubes.workspace = true
lin_alg.workspace = true
rerecast.workspace = true
zip.workspace = true
bytemuck.workspace = true
image.workspace = true
pollster.workspace = true
wgpu.workspace = true

[dev-dependencies]
tempfile.workspace = true
